manifest/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  namespace: user12
  labels:
    app: eureka
spec:
  selector:
    matchLabels:
      app: eureka
  replicas: 1
  template:
    metadata:
      name: eureka
      labels:
        app: eureka
    spec:
      serviceAccount: sa-user12
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: eureka
          image: docker.io/hiondal/eureka:2.0.0
          imagePullPolicy: Always
          ports:
            - name: container-port
              containerPort: 18080
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 18080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 18080
              scheme: HTTP
            initialDelaySeconds: 10    
            periodSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: user12
spec:
  type: ClusterIP
  selector:
    app: eureka
  ports:
    - name: eureka
      port: 18080
      targetPort: 18080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eureka
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: user12.eureka.msa.edutdc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eureka
                port: 
                  number: 18080
