manifest/subrecommend.yaml
# deploy.yaml.template
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subrecommend
  namespace: user15
  labels:
    app: subrecommend
spec:
  selector:
    matchLabels:
      app: subrecommend
  replicas: 1
  template:
    metadata:
      name: subrecommend
      labels:
        app: subrecommend
    spec:
      serviceAccount: sa-user15
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: subrecommend
          image: docker.io/hiondal/subrecommend:20241021012401
          imagePullPolicy: Always
          ports:
            - name: container-port
              containerPort: 18080
          resources:
            requests:
              cpu: 256m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          startupProbe:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - "echo > /dev/tcp/mysql-primary-headless/3306 >/dev/null 2 && curl -f http://config:18080/actuator/health/readiness"
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 18080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 18080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: subrecommend
  namespace: user15
spec:
  type: ClusterIP
  selector:
    app: subrecommend
  ports:
    - name: subrecommend
      port: 18080
      targetPort: 18080
---
apiVersion: v1
kind: Service
metadata:
  name: subrecommend-headless
  namespace: user15
spec:
  clusterIP: None
  selector:
    app: subrecommend
  ports:
    - name: subrecommend
      port: 18080
      targetPort: 18080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subrecommend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: user15.subrecommend.msa.edutdc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: subrecommend
                port:
                  number: 18080
